--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password
 console.log('EMAIL_USER:', process.env.EMAIL_USER);
 console.log('EMAIL_PASS:', process.env.EMAIL_PASS);
+MONGO_URI=mongodb://localhost:27017/EmployeeDB
+
